--- a/app/src/main/res/layout/each_definition.xml
+++ b/app/src/main/res/layout/each_definition.xml
@@ -3,7 +3,16 @@
 this layout is inflated by recyclerview adapater for each definition. some
 terms have different amount of definitions.-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+    <TextView
+        android:id="@+id/eachDefinitionTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="18sp"
+        android:padding="16dp"
+        tools:ignore="MissingConstraints" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
