--- a/app/src/main/res/layout/activity_word_definitions_page.xml
+++ b/app/src/main/res/layout/activity_word_definitions_page.xml
@@ -10,28 +10,34 @@
     tools:context=".views.WordDefinitionsPage">
 
     <!--term user is searching for-->
-    <TextView
-        android:id="@+id/searchedTermTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Searched Term"
-        android:textSize="24sp"
-        android:layout_gravity="center_horizontal"
-        android:padding="16dp"
-        tools:ignore="MissingConstraints" />
 
     <!--definitions list of that term-->
+
+    <TextView
+        android:id="@+id/searchedTermTextView"
+        android:layout_width="188dp"
+        android:layout_height="71dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginStart="110dp"
+        android:layout_marginTop="133dp"
+        android:layout_marginBottom="23dp"
+        android:padding="16dp"
+        android:text="Searched Term"
+        android:textSize="24sp"
+        app:layout_constraintBottom_toTopOf="@+id/definitionsListRecyclerView"
+        app:layout_constraintStart_toStartOf="@+id/definitionsListRecyclerView"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="MissingConstraints" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/definitionsListRecyclerView"
-        android:layout_width="392dp"
-        android:layout_height="662dp"
-        android:layout_marginStart="184dp"
-        android:layout_marginTop="68dp"
-        android:layout_marginEnd="185dp"
-        android:layout_marginBottom="450dp"
+        android:layout_width="391dp"
+        android:layout_height="453dp"
+        android:layout_marginBottom="20dp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintVertical_bias="0.134"
+        app:layout_constraintTop_toBottomOf="@+id/searchedTermTextView"
         tools:ignore="MissingConstraints" />
 
 
