--- a/app/src/main/res/layout/each_definition.xml
+++ b/app/src/main/res/layout/each_definition.xml
@@ -3,19 +3,23 @@
 this layout is inflated by recyclerview adapater for each definition. some
 terms have different amount of definitions.-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
+
+<!--    android:scrollbars="vertical"-->
 
     <TextView
         android:id="@+id/eachDefinitionTextView"
-        android:layout_width="391dp"
-        android:layout_height="338dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:padding="16dp"
         android:textSize="18sp"
-        tools:ignore="MissingConstraints"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="274dp"
-        tools:visibility="visible" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:text="@string/definition" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
