--- a/app/src/main/res/layout/activity_saved_terms.xml
+++ b/app/src/main/res/layout/activity_saved_terms.xml
@@ -7,4 +7,28 @@
     android:layout_height="match_parent"
     tools:context=".views.SavedTerms">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/myToolbar"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="1dp"
+        android:background="#3F51B5"
+        app:layout_constraintBottom_toTopOf="@+id/savedTermsRecyclerView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/savedTermsRecyclerView"
+        android:layout_width="405dp"
+        android:layout_height="642dp"
+        android:layout_marginStart="1dp"
+        android:layout_marginEnd="1dp"
+        android:layout_marginBottom="1dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
