--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.MainActivity">
+    tools:context=".MainActivity">
+
+    <!--    android:text="@string/myToolbar"-->
+
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/myToolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:background="#3F51B5"
+        android:background="@color/cherry"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.005"
-        tools:layout_editor_absoluteX="-2dp" />
-<!--    android:text="@string/myToolbar"-->
-
+        app:layout_constraintVertical_bias="0.0" />
 
     <EditText
         android:id="@+id/searchedTermEditText"
-        android:layout_width="wrap_content"
-        android:layout_height="48dp"
+        android:layout_width="196dp"
+        android:layout_height="45dp"
         android:ems="10"
         android:hint="@string/searchInput"
         android:inputType="text"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.248"
+        app:layout_constraintHorizontal_bias="0.174"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.363" />
@@ -36,28 +39,16 @@
         android:id="@+id/searchButton"
         android:layout_width="wrap_content"
         android:layout_height="48dp"
-        android:layout_marginTop="239dp"
-        android:layout_marginEnd="32dp"
-        android:layout_marginBottom="444dp"
+        android:layout_marginStart="28dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginEnd="36dp"
+        android:layout_marginBottom="447dp"
         android:text="@string/searchButton"
+        app:backgroundTint="@color/cherry"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.882"
+        app:layout_constraintHorizontal_bias="0.666"
         app:layout_constraintStart_toEndOf="@+id/searchedTermEditText"
-        app:layout_constraintTop_toTopOf="parent" />
-
-<!--    <Button-->
-<!--        android:id="@+id/viewSavedButton"-->
-<!--        android:layout_width="wrap_content"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_marginStart="140dp"-->
-<!--        android:layout_marginTop="78dp"-->
-<!--        android:layout_marginEnd="141dp"-->
-<!--        android:layout_marginBottom="309dp"-->
-<!--        android:text="@string/viewSavedButton"-->
-<!--        app:layout_constraintBottom_toBottomOf="parent"-->
-<!--        app:layout_constraintEnd_toEndOf="parent"-->
-<!--        app:layout_constraintStart_toStartOf="parent"-->
-<!--        app:layout_constraintTop_toBottomOf="@+id/searchInput" />-->
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
