--- a/app/src/main/res/layout/activity_saved_terms.xml
+++ b/app/src/main/res/layout/activity_saved_terms.xml
@@ -5,18 +5,18 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".views.SavedTerms">
+    tools:context=".SavedTerms">
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/myToolbar"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginBottom="1dp"
-        android:background="#3F51B5"
-        app:layout_constraintBottom_toTopOf="@+id/savedTermsRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="@color/cherry"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/savedTermsRecyclerView"
