--- a/app/src/main/res/layout/each_definition.xml
+++ b/app/src/main/res/layout/each_definition.xml
@@ -18,6 +18,7 @@ terms have different amount of definitions.-->
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:text="@string/definition" />
