--- a/app/src/main/res/layout/activity_saved_terms.xml
+++ b/app/src/main/res/layout/activity_saved_terms.xml
@@ -12,23 +12,28 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@color/cherry"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent"/>
+
+    <TextView
+        android:id="@+id/savedPage"
+        android:layout_width="181dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="112dp"
+        android:layout_marginTop="4dp"
+        android:gravity="center"
+        android:text="@string/savedPage"
+        android:textSize="24sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/savedTermsRecyclerView"
-        android:layout_width="405dp"
-        android:layout_height="642dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        android:layout_width="403dp"
+        android:layout_height="608dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/myToolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/savedPage" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
