--- a/app/src/main/res/layout/each_term.xml
+++ b/app/src/main/res/layout/each_term.xml
@@ -9,8 +9,8 @@ this layout is inflated by recyclerview adapater for each term.-->
 
     <TextView
         android:id="@+id/eachTermTextView"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="410dp"
+        android:layout_height="58dp"
         android:padding="16dp"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -18,6 +18,7 @@ this layout is inflated by recyclerview adapater for each term.-->
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="1.0"
         tools:text="@string/searched_term" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
