--- a/app/src/main/res/layout/activity_word_definitions_page.xml
+++ b/app/src/main/res/layout/activity_word_definitions_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <!--the word they searched and the list of definitions of that word-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -39,6 +38,7 @@
         android:focusable="true"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="16dp"
+        android:contentDescription="@string/saved"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/searchedTermTextView"
         app:layout_constraintBottom_toBottomOf="@+id/searchedTermTextView" />
