master2: created main page, dictionary app is accesible through toolbar.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,4 +4,5 @@
     <color name="cherry">#A35A5A</color>
     <color name="white">#FFFFFFFF</color>
     <color name="lightPink">#FDF2F2</color>
+    <color name="green">#B3C6AB</color>
 </resources>
