master: up to date. main page is done, all merged. dictionary app works from toolbar on main page. will create master3 for backup just in case.

--- a/app/src/main/res/menu/final_project_main_page_toolbar_menu.xml
+++ b/app/src/main/res/menu/final_project_main_page_toolbar_menu.xml
@@ -4,31 +4,31 @@
 
     <item
         android:id="@+id/home"
-        android:icon="@drawable/mainHome"
+        android:icon="@drawable/mainhome"
         android:title="@string/home"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/dictionarySearch"
-        android:icon="@drawable/mainDictionary"
+        android:icon="@drawable/maindictionary"
         android:title="@string/dictionarySearch"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/sunriseSunsetSearch"
-        android:icon="@drawable/mainSun"
+        android:icon="@drawable/mainsun"
         android:title="@string/sunriseSunsetSearch"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/recipeSearch"
-        android:icon="@drawable/mainRecipe"
+        android:icon="@drawable/mainrecipe"
         android:title="@string/recipeSearch"
         app:showAsAction="always" />
 
     <item
         android:id="@+id/songSearch"
-        android:icon="@drawable/mainSong"
+        android:icon="@drawable/mainsong"
         android:title="@string/songSearch"
         app:showAsAction="always" />
 
