--- a/app/src/main/res/layout/one_row_location.xml
+++ b/app/src/main/res/layout/one_row_location.xml
@@ -9,8 +9,8 @@
         android:id="@+id/latitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="120dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="130dp"
+        android:layout_marginTop="30dp"
         android:text="TextView"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -19,8 +19,8 @@
         android:id="@+id/longitude"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="25dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginTop="30dp"
         android:text="TextView"
         app:layout_constraintStart_toEndOf="@+id/latitude"
         app:layout_constraintTop_toTopOf="parent" />
@@ -30,7 +30,7 @@
         android:layout_width="30dp"
         android:layout_height="30dp"
         android:layout_marginStart="50dp"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="25dp"
         app:layout_constraintEnd_toStartOf="@+id/latitude"
         app:layout_constraintHorizontal_bias="0.300"
         app:layout_constraintStart_toStartOf="parent"
@@ -41,11 +41,10 @@
         android:id="@+id/deleteLocation"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="50dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.866"
-        app:layout_constraintStart_toEndOf="@+id/longitude"
+        android:layout_marginTop="25dp"
+        app:layout_constraintEnd_toStartOf="@+id/getInfo"
+        app:layout_constraintHorizontal_bias="0.781"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/delete" />
 
