--- a/app/src/main/res/layout/activity_show_result.xml
+++ b/app/src/main/res/layout/activity_show_result.xml
@@ -19,10 +19,10 @@
 
     <TextView
         android:id="@+id/sunriseTime"
+        android:textColor="@color/cherry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="104dp"
-        android:text="............."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.525"
         app:layout_constraintStart_toEndOf="@+id/sunriseText"
@@ -40,11 +40,11 @@
 
     <TextView
         android:id="@+id/sunsetTime"
+        android:textColor="@color/cherry"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="40dp"
-        android:text="............."
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.085"
         app:layout_constraintStart_toEndOf="@+id/sunsetText"
