--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,5 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lightPink">#FDF2F2</color>
     <color name="green">#B3C6AB</color>
+    <color name="sunapp">#4CAF50</color>
 </resources>
