--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,8 @@
-<?xml version="1.0" encoding="utf-8"?>
-<resources>
-    <?xml version="1.0" encoding="utf-8"?>
+
     <resources>
-        <color name="secondaryText/black">#FF000000</color>
-        <color name="babyBlue"></color>
-        <color name="primaryText/white">#FFFFFFFF</color>
-        <color name="background/purple">#BCA3E8</color>
-        <color name="notsureyet/lightYellow">#ECCD71</color>
+        <color name="black">#FF000000</color>
+        <color name="babyBlue">#6BB7D8</color>
+        <color name="white">#FFFFFFFF</color>
+        <color name="purple">#BCA3E8</color>
+        <color name="lightYellow">#ECCD71</color>
     </resources>
-</resources>
